force-app/main/default/objects/Transaction_Logs__e/Transaction_Logs__e.object-meta.xml
<CustomObject>
    <description>Capture transaction log information so it is written even if an exception occurs.</description>
    <label>Transaction Logs</label>
    <pluralLabel>Transaction Logs</pluralLabel>
</CustomObject>