force-app/main/default/objects/Transaction_Logs__e/fields/App_Plugin__c.field-meta.xml
<CustomField>
    <fullName>App_Plugin__c</fullName>
    <label>App Plugin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>