force-app/main/default/objects/Transaction_Logs__e/fields/Transaction_Detail__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Detail__c</fullName>
    <label>Transaction Detail</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>