force-app/main/default/objects/Transaction_Logs__e/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <label>Transaction Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>